@@ -19,6 +19,7 @@ import java.util.function.Predicate;
 import java.util.regex.Pattern;
 
 import static edu.upf.taln.textplanning.common.FileUtils.getFilesInFolder;
+import static edu.upf.taln.textplanning.tools.evaluation.EvaluationTools.other_pos_tag;
 import static edu.upf.taln.textplanning.tools.evaluation.EvaluationTools.adverb_pos_tag;
 import static java.util.stream.Collectors.*;
 
@@ -50,7 +51,8 @@ public class RankingEvaluation
 	{
 		final Options options = new Options();
 		final List<Set<AlternativeMeanings>> goldMeanings = getGoldMeanings(gold_folder);
-		options.excluded_POS_Tags = Set.of(EvaluationTools.other_pos_tag, adverb_pos_tag);
+		options.excluded_POS_Tags = new HashSet<>(Arrays.asList(other_pos_tag, adverb_pos_tag)); 
+		//options.excluded_POS_Tags = Collections.unmodifiableSet(options.excluded_POS_Tags); 
 		final Corpus corpus = EvaluationTools.loadResourcesFromXML(xml_file, output_path,
 				resources_factory, language, max_span_size, options);
 		assert goldMeanings.size() == corpus.texts.size();
